--- a/css/index-style.css
+++ b/css/index-style.css
@@ -117,7 +117,7 @@ header {
 
 
     0% {
-        background-image: url(../images/home.webp);
+        background-image: url(../images/Home.webp);
     }
 
     10% {
