--- a/css/index-style.css
+++ b/css/index-style.css
@@ -468,4 +468,31 @@ header .overlay {
     /* bottom: 0; */
 
 }
+
+.client{
+    background-color: rgba(0, 0, 0,0.8);
+    color: var(--base-color);
+}
+.contact .btn{
+    background-color: var(--main-color);
+    color: var(--base-color);
+}
+.info{
+    font-size: 1.2rem;
+    line-height: 2;
+}
+
+.info span{
+    font-weight: 500;
+}
+.social i{
+    padding-right: 5px;
+    color: var(--main-color);
+    opacity: 0.8;
+    font-size: 2.5rem;
+    transition: all 0.5s;
+}
+.social i:hover{
+    opacity: 1;
+}
 /*-------------------------end Portfolio-----------------------------*/
